correct footer overflow, correct position nav bar

--- a/styles/main.css
+++ b/styles/main.css
@@ -35,7 +35,7 @@ a {
 }
 
 .small-font-size {
-  font-size: 0.7rem;
+  font-size: 2vw;
 }
 
 .medium-font-size {
